--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@rbxts/fenwick-tree",
   "version": "1.0.0",
-  "description": "A Fenwick Tree implementation.",
+  "description": "A 1-based Fenwick Tree implementation.",
   "main": "src/init.lua",
   "scripts": {
     "build": "rbxtsc",
@@ -18,7 +18,7 @@
   "license": "MIT",
   "types": "src/index.d.ts",
   "files": [
-    "out",
+    "src",
     "!**/*.tsbuildinfo"
   ],
   "publishConfig": {
@@ -29,7 +29,7 @@
     "@rbxts/types": "^1.0.813",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
-    "eslint": "^9.17.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-roblox-ts": "^0.0.36",
