--- a/wally.toml
+++ b/wally.toml
@@ -1,7 +1,10 @@
 [package]
 name = "quamatic/fenwick-tree"
+description = "A 1-based Fenwick Tree implementation."
+license = "MIT"
 version = "0.1.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
-[dependencies]
+[dev-dependencies]
+TestEZ = "roblox/testez@0.4.1"
